# Hybrid

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  SECURITY.md  main.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md
examples/: test.hyb
extension/: INSTALL.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts
extension/syntaxes/: hybrid.tmLanguage.json
frontend/: ast.ts  lexer.ts  parser.ts
language/: Cargo.toml
language/src/: ast.rs  evaluator.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs
language/src/runtime/: manager.rs  mod.rs
runtime/: environment.ts  interpreter.ts  values.ts
runtime/evaluations/: expressions.ts  statements.ts
tests/: basic.hyb
website/: .firebaserc  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
website/public/: install.ps1  install.sh  sitemap.xml
website/public/docs/: cli-interface.md  getting-started.md  install-linux.md  install-macos.md  install-windows.md  mutation-syntax.md  security.md  type-marshaling.md
website/src/: App.tsx  index.css  main.tsx
website/src/components/: DeviceDetector.ts  LanguageTicker.tsx  Layout.tsx  SEO.tsx  StatsTicker.tsx  TerminalWindow.tsx  TypewriterEffect.tsx
website/src/pages/: Docs.tsx  Download.tsx  Home.tsx  Languages.tsx
