[package]
name = "hybrid"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hybrid"
path = "src/main.rs"

[[bin]]
name = "hybrid-lsp"
path = "src/lsp.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
lsp-types = "0.94"
